代码格式化

--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "type": "module",
+  "dependencies": {
+    "superagent": "^8.1.2",
+    "@types/superagent": "^4.1.19"
   }
 }
