--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   // 指定编译那些文件
   "include": [
-    "./src/*.ts"
+    "./src"
   ],
   // 指定排除哪些文件
   "exclude": [
@@ -36,7 +36,7 @@
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
     // 指定参与编译的目录
-     "rootDir": "./src",                                  /* Specify the root folder within your source files. */
+//     "rootDir": "./src/*",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -107,7 +107,7 @@
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
     // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
     // 检测未被使用的局部变量
-    "noUnusedLocals": true,                           /* Enable error reporting when local variables aren't read. */
+//    "noUnusedLocals": true,                           /* Enable error reporting when local variables aren't read. */
     // 检查未被使用的函数参数
     "noUnusedParameters": true,                       /* Raise an error when a function parameter isn't read. */
     // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
