--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "ts-node ./src/index.ts",
     "build": "tsc",
-    "watch": "tsc -w",
-    "start": "tsc && node ./build/index.js",
-    "dev": "concurrently npm run watch && npm run start"
+    "dev:watch": "tsc -w",
+    "dev:start": "nodemon node ./build/index.js",
+    "dev": "tsc && concurrently npm:dev:*"
   },
   "nodemonConfig": {
     "ignore": [
@@ -19,16 +19,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "cheerio": "1.0.0-rc.12",
+    "express": "^4.18.2",
+    "superagent": "^8.1.2"
+  },
   "devDependencies": {
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
-  },
-  "type": "module",
-  "dependencies": {
+    "typescript": "^5.2.2",
     "@types/cheerio": "^0.22.32",
-    "@types/superagent": "^4.1.19",
-    "cheerio": "1.0.0-rc.12",
-    "superagent": "^8.1.2"
+    "@types/express": "^4.17.19",
+    "@types/superagent": "^4.1.19"
   }
 }
